--- a/style/style.css
+++ b/style/style.css
@@ -2,3 +2,10 @@ body {
     background-color: #343434;
     font-family: monospace;
 }
+
+#app {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
