--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,8 @@ body {
 }
 
 #app {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 20px;
+    margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
 }
