--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,14 @@ body {
     background-color: #343434;
     font-family: monospace;
     overflow: hidden;
+    margin-top: 20px;
 }
 
 #app {
-    margin-top: 20px;
-    margin-bottom: auto;
-    margin-left: auto;
-    margin-right: auto;
+    display: grid;
+    grid-template-columns: max-content max-content;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin: 0px auto;
+    width: max-content;
 }
