--- a/style/style.css
+++ b/style/style.css
@@ -13,3 +13,27 @@ body {
     margin: 0px auto;
     width: max-content;
 }
+
+#menuscreen {
+    background-color: black;
+    color: antiquewhite;
+}
+
+#stat_block {
+    display: grid;
+    font-size: 18px;
+    padding: 15px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto auto;
+}
+
+#name_lvl {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+#hp_mana {
+    display: grid;
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+}
